--- a/jumpstart/src/app/data-binding/data-binding.component.html
+++ b/jumpstart/src/app/data-binding/data-binding.component.html
@@ -8,20 +8,20 @@
 <div>
     <h4>1. Interpolation</h4>    
      <!-- Example1: -->
-    <i>Example 1: Using a string property</i>
+    <i><b>Example 1:</b> Using a string property</i>
     <p class=binding>name: {{name}}</p>
     <i>Note:- I am just displaying the value of property 'name' which is written into 'data-binding.ts' file</i>        
     
     <!-- Example 2: -->
     <app-line></app-line>
-    <i>Example 2: Using Numeric Expression To Evaluate</i>
+    <i><b>Example 2:</b> Using Numeric Expression To Evaluate</i>
     <p class=binding>10 + 5 -   5 = {{10 + 5 - 5}}</p>
     <i>Note:- Here I am displaying the sum of 10 + 5 - 5 using interpolation</i>        
     
 
     <!-- Example 3: -->
     <app-line></app-line>
-    <i>Example 3: Using Object Property</i>
+    <i><b>Example 3:</b> Using Object Property</i>
     <p class=binding>employee.name: {{employee.name}}</p>
     <p class=binding>employee.designation: {{employee.designation}}</p>
     <i>Note:- Here I am displaying the property value of employe object using interpolation</i>  
@@ -33,9 +33,106 @@
 <div>
     <h4>2. Property Binding</h4>    
      <!-- Example 1: -->
-    <i>Example 1: Using a string property</i>
-    <input type="text" value="name" />
+     <div>
+    <i><b>Example 1:</b> Using a string property to bind into <b>VALUE</b> property</i>
+    
+    <p class="binding">[value] = "Praveen Kumar"</p>
+    <input type="text" [value]="name" />
+    <app-line></app-line>
+
+    <p class="binding"><p class="binding">bind-value="Praveen Kumar"</p>
+    <input type="text" bind-value="name" />
+    <app-line></app-line> 
+    
+    <i>Note: We can achieve the same by using <b>interpolation</b> </i>
+    <p class="binding">value="Praveen Kumar within double curly braces" </p>
+    <input type="text" value="{{name}}" />
     
     <i>Note:- I am just displaying the value of property 'name' which is written into 'data-binding.ts' file</i>        
+    </div>
+
+    <!-- Example 2: -->
+    <app-line></app-line>
+    <div>
+       <i><b>Example 2:</b> Using a string property to bind into <b>ID</b> property</i><br>
+       <div [id] = "firstDiv"></div>
+       <p class="binding">
+           [id] = "firstDiv" <i>using Property Binding</i>
+       </p> 
+       <app-line></app-line>
+
+       <div bind-id = "firstDiv"></div>
+       <p class="binding">
+           bind-id= "firstDiv" <i>using Property Binding</i>
+        </p>
+        <app-line></app-line>
+
+
+       <div id = "{{firstDiv}}"></div>
+       <p class="binding">id = "firstDiv variable inclosed inside interpolation symbol"
+        <i>using Interpolation</i>
+       </p>
+       <i><b>Note: </b>here firstDiv is a property defined inside data-binding.ts file</i>
+    </div>
+
+    <!-- Example 3: -->
+    <app-line></app-line>
+    <div>
+        <i><b>Example 3:</b>Property binding for <b>CLASS</b> property</i>
+        
+        <div [class]="textPrimary">I am text-primary class</div>
+        <p class="binding">[class]="textPrimary"</p>
+
+        <div bind-class="textPrimary">I am text-primary class</div>
+        <p class="binding">bind-class="textPrimary"</p>
+
+        <div class="{{textPrimary}}">I am text-primary class</div>
+        <p class="binding">doubleCurly class doubleCurlyClose="textPrimary"</p>
+    </div>
+
+    <!-- Example 4: -->
+    <app-line></app-line>
+    <div>
+        <i><b>Example 4:</b>Property binding for <b>BOOLEAN</b> property: disabled</i>
+        
+        <input [disabled]="isDisabled">
+        <p class="binding">[disabled]="isDisabled"</p>
+
+        <input bind-disabled="isDisabled">
+        <p class="binding">bind-disabled="isDisabled"</p>
+
+        <input disabled="{{true}}">
+        <p class="binding">disabled using interpolation [[true]]</p>
+        <mark>Interpolation doesn't work with bollean property</mark>
+        <i>for class property, html property binding and angular property binding both could not be applied together. 
+            Only angular property binding will work</i>
+    </div>
+
+        <!-- Example 5 -->
+        <app-line></app-line>
+        <div>
+            <i><b>Example 5:</b>Property binding for <b>STYLE</b> property</i>
+            
+            <h5 [style.color]="'orange'">Orange Text</h5>
+            <p class="binding">[style.color]="'orange'"</p>
     
+            <app-line></app-line>
+            <h5 bind-style.color="'Yellow'">Yellow Text</h5>
+            <p class="binding">bind-style.color="'Yellow'"</p>
+
+            <app-line></app-line>
+            <h5 [style.color]="textOrange">Dynamic Color</h5>
+            <p class="binding">[style.color]="textOrange"</p>
+
+            <app-line></app-line>
+            <h5 [style.color]="hasError ? 'red' : 'green'">Text orange and bg-primary</h5>
+            <p class="binding">[style.color]="textStyles"</p>
+
+            <h5 [ngStyle]="textStyles">[ngStyle] directive to bind multiple stles together</h5>
+
+            <h5 [ngClass]="'text-primary bg-primary'">dfdfdfd</h5>
+
+
+        </div>
+
 </div>
