template reference variable

--- a/jumpstart/src/app/app.component.html
+++ b/jumpstart/src/app/app.component.html
@@ -8,7 +8,9 @@
   
 <div class="container">   
   <div>
-    <app-data-binding></app-data-binding>
+    <!-- <app-data-binding></app-data-binding> -->
+
+    <app-template-reference-variable></app-template-reference-variable>
   </div>
 </div>
 
