--- a/jumpstart/src/app/data-binding/data-binding.component.html
+++ b/jumpstart/src/app/data-binding/data-binding.component.html
@@ -167,3 +167,10 @@
 
 
 </div>
+
+<hr>
+<!-- Tow Way Data Binding-->
+<div>
+    <h4>Tow Way Data Binding</h4>
+    <i>As per angular Two Way Data Binding syntax is kown as 'Banana in a Box</i>
+</div>
